<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>get_data</name>
  <version>0.0.0</version>
  <description>Combining all data for path generator</description>
  <maintainer email="bialoskorski.piotr23@gmail.com">Piotr Bialoskorski</maintainer>
  <license>Apache-2.0</license>

  <depend>nav_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>my_interfaces</depend>
  <depend>std_msgs</depend>
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <exec_depend>ros2launch</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
